# de-ludo-scachorum

./: distance.py  pico.py  prepare_rl_verl_data.py  prepare_sft.py  puzzle_rl_verl.sh  puzzle_sft.yaml  pyproject.toml  readme.md  reward.py  reward_cint.py  rl_verl.sh  sample.py  tokenization.py
interactive/: create_puzzles.py
interactive/client/: index.html
