[project]
name = "de-ludo-scachorum"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
    "vllm",
    "RapidFuzz",
    "chess",
    "CairoSVG",
    "accelerate",
    "torch",
    "transformers",
    "datasets",
    "openai",
    "fastapi",
    "rich",
    "tqdm",
    "pandas",
    "pyarrow",
    "matplotlib",
    "pillow",
    "pyyaml",
    "jinja2",
    "wandb",
]

[tool.uv]
# required-environments = [
#     "sys_platform == 'darwin' and platform_machine == 'arm64'"
# ]

override-dependencies = [
    "nvidia-cudnn-frontend ; sys_platform == 'linux'",
    "nvidia-cublas-cu12 ; sys_platform == 'linux'",
    "nvidia-cuda-cupti-cu12 ; sys_platform == 'linux'",
    "nvidia-cuda-nvrtc-cu12 ; sys_platform == 'linux'",
    "nvidia-cuda-runtime-cu12 ; sys_platform == 'linux'",
    "nvidia-cudnn-cu12 ; sys_platform == 'linux'",
    "nvidia-cufft-cu12 ; sys_platform == 'linux'",
    "nvidia-cufile-cu12 ; sys_platform == 'linux'",
    "nvidia-curand-cu12 ; sys_platform == 'linux'",
    "nvidia-cusolver-cu12 ; sys_platform == 'linux'",
    "nvidia-cusparse-cu12 ; sys_platform == 'linux'",
    "nvidia-cusparselt-cu12 ; sys_platform == 'linux'",
    "nvidia-nccl-cu12 ; sys_platform == 'linux'",
    "nvidia-nvjitlink-cu12 ; sys_platform == 'linux'",
    "nvidia-nvtx-cu12 ; sys_platform == 'linux'",
    "nvidia-nvshmem-cu12 ; sys_platform == 'linux'",
    "nvidia-ml-py ; sys_platform == 'linux'",
    "nvidia-cutlass-dsl ; sys_platform == 'linux'",
    "nvidia-cudnn-frontend ; sys_platform == 'linux'",
    "flash-attn ; sys_platform == 'linux'",
    "triton ; sys_platform == 'linux'",
]
